--- a/Sleepy/Packages/manifest.json
+++ b/Sleepy/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.unity.feature.2d": "2.0.1",
+    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.modules.ai": "1.0.0",
